--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "jbrada-website",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "My minimalistic personal site",
   "main": "index.html",
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bowercopy": "^1.2.4",
-    "grunt-concat-in-order": "^0.2.6",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-less": "^1.1.0",
-    "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-svg-sprite": "^1.3.6",
-    "lesshat": "^4.1.0"
-  },
-  "author": "Jbrada",
+  "author": "Jiří Brada",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "http://github.com/npm/npm.git"
+    "url": "https://github.com/higi90/jbrada.cz.git"
+  },
+  "devDependencies": {
+    "font-awesome": "^4.7.0",
+    "grunt": "^1.0.1",
+    "grunt-concat-in-order": "^0.2.6",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-less": "^1.1.0",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "jquery": "^3.3.1",
+    "lesshat": "^4.1.0"
   }
 }
